# neat-strat

./: .gitignore  README.md  board.py  constants.py  doc.tex  generate_stats.py  generation_10_stats.pkl  generation_17_stats.pkl  generation_18_stats.pkl  generation_21_stats.pkl  generation_24_stats.pkl  generation_27_stats.pkl  generation_29_stats.pkl  generation_2_stats.pkl  generation_30_stats.pkl  generation_33_stats.pkl  generation_34_stats.pkl  generation_35_stats.pkl  generation_37_stats.pkl  generation_41_stats.pkl  generation_44_stats.pkl  generation_45_winner.pkl  generation_46_stats.pkl  generation_48_stats.pkl  generation_49_stats.pkl  generation_4_stats.pkl  generation_50_stats.pkl  generation_5_stats.pkl  generation_6_stats.pkl  hexagon.py  main.py  pyproject.toml  refs.bib  requirements.txt  winner_gen_30_old  winner_gen_5  winner_gen_5_agressive
aggressive/: generation_0_stats.pkl  generation_0_winner.pkl  generation_100_stats.pkl  generation_101_stats.pkl  generation_102_stats.pkl  generation_102_winner.pkl  generation_103_stats.pkl  generation_104_stats.pkl  generation_105_stats.pkl  generation_106_stats.pkl  generation_107_stats.pkl  generation_108_stats.pkl  generation_109_stats.pkl  generation_10_stats.pkl  generation_110_stats.pkl  generation_111_stats.pkl  generation_112_stats.pkl  generation_113_stats.pkl  generation_114_stats.pkl  generation_115_stats.pkl  generation_116_stats.pkl  generation_11_stats.pkl  generation_12_stats.pkl  generation_13_stats.pkl  generation_14_stats.pkl  generation_15_stats.pkl  generation_16_stats.pkl  (+95 more)
src/: board.py  (+8 more)
(+177 files in other folders)
